@@ -1,3 +1,7 @@
+2009-07-16  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Added feature #11544: select/deselect all checkbox in db compare tool and extension manager for each type of modification
+
 2009-07-16  Francois Suter  <francois@typo3.org>
 
 	* Bug #11249: Abusive deprecation logging in tslib_content::getData()
